--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
